Highlighted news teaser: prevent cover image crop
Add class 'fullwidth-teaser-news' to prevent cover image from being cropped.

--- a/assets/components/organisms/fullwidth-teaser/fullwidth-teaser.scss
+++ b/assets/components/organisms/fullwidth-teaser/fullwidth-teaser.scss
@@ -84,6 +84,15 @@
   }
 }
 
+.fullwidth-teaser-news {
+  
+  picture,
+  figure {
+    height: auto;
+    max-height: none;
+  }
+}
+
 .fullwidth-teaser-text {
   padding: 1rem $grid-gutter-width/2 0;
   background: $white;
